// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollMarginLeft renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-left: 0;
  -moz-scroll-margin-left: 0;
  -ms-scroll-margin-left: 0;
  scroll-margin-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: 0;
  -moz-scroll-margin-left: 0;
  -ms-scroll-margin-left: 0;
  scroll-margin-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: 0;
  -moz-scroll-margin-left: 0;
  -ms-scroll-margin-left: 0;
  scroll-margin-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: 0;
  -moz-scroll-margin-left: 0;
  -ms-scroll-margin-left: 0;
  scroll-margin-left: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginLeft renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-left: hasnot;
  -moz-scroll-margin-left: hasnot;
  -ms-scroll-margin-left: hasnot;
  scroll-margin-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: has;
  -moz-scroll-margin-left: has;
  -ms-scroll-margin-left: has;
  scroll-margin-left: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: hasnot;
  -moz-scroll-margin-left: hasnot;
  -ms-scroll-margin-left: hasnot;
  scroll-margin-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: has;
  -moz-scroll-margin-left: has;
  -ms-scroll-margin-left: has;
  scroll-margin-left: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginLeft renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-left: invalid.path.1;
  -moz-scroll-margin-left: invalid.path.1;
  -ms-scroll-margin-left: invalid.path.1;
  scroll-margin-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: invalid.path.1;
  -moz-scroll-margin-left: invalid.path.1;
  -ms-scroll-margin-left: invalid.path.1;
  scroll-margin-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: invalid.path.1;
  -moz-scroll-margin-left: invalid.path.1;
  -ms-scroll-margin-left: invalid.path.1;
  scroll-margin-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: invalid.path.1;
  -moz-scroll-margin-left: invalid.path.1;
  -ms-scroll-margin-left: invalid.path.1;
  scroll-margin-left: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginLeft renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-left: -54881px;
  -moz-scroll-margin-left: -54881px;
  -ms-scroll-margin-left: -54881px;
  scroll-margin-left: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: -54881px;
  -moz-scroll-margin-left: -54881px;
  -ms-scroll-margin-left: -54881px;
  scroll-margin-left: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: -42365px;
  -moz-scroll-margin-left: -42365px;
  -ms-scroll-margin-left: -42365px;
  scroll-margin-left: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: -42365px;
  -moz-scroll-margin-left: -42365px;
  -ms-scroll-margin-left: -42365px;
  scroll-margin-left: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginLeft renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: July;
    -moz-scroll-margin-left: July;
    -ms-scroll-margin-left: July;
    scroll-margin-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: August;
    -moz-scroll-margin-left: August;
    -ms-scroll-margin-left: August;
    scroll-margin-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: September;
    -moz-scroll-margin-left: September;
    -ms-scroll-margin-left: September;
    scroll-margin-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-left: November;
    -moz-scroll-margin-left: November;
    -ms-scroll-margin-left: November;
    scroll-margin-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: July;
    -moz-scroll-margin-left: July;
    -ms-scroll-margin-left: July;
    scroll-margin-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: August;
    -moz-scroll-margin-left: August;
    -ms-scroll-margin-left: August;
    scroll-margin-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: September;
    -moz-scroll-margin-left: September;
    -ms-scroll-margin-left: September;
    scroll-margin-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-left: November;
    -moz-scroll-margin-left: November;
    -ms-scroll-margin-left: November;
    scroll-margin-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: May;
    -moz-scroll-margin-left: May;
    -ms-scroll-margin-left: May;
    scroll-margin-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: June;
    -moz-scroll-margin-left: June;
    -ms-scroll-margin-left: June;
    scroll-margin-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: April;
    -moz-scroll-margin-left: April;
    -ms-scroll-margin-left: April;
    scroll-margin-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-left: November;
    -moz-scroll-margin-left: November;
    -ms-scroll-margin-left: November;
    scroll-margin-left: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: May;
    -moz-scroll-margin-left: May;
    -ms-scroll-margin-left: May;
    scroll-margin-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: June;
    -moz-scroll-margin-left: June;
    -ms-scroll-margin-left: June;
    scroll-margin-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-left: April;
    -moz-scroll-margin-left: April;
    -ms-scroll-margin-left: April;
    scroll-margin-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-left: November;
    -moz-scroll-margin-left: November;
    -ms-scroll-margin-left: November;
    scroll-margin-left: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginLeft renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-margin-left: July;
    -moz-scroll-margin-left: July;
    -ms-scroll-margin-left: July;
    scroll-margin-left: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-left: August;
    -moz-scroll-margin-left: August;
    -ms-scroll-margin-left: August;
    scroll-margin-left: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-left: September;
    -moz-scroll-margin-left: September;
    -ms-scroll-margin-left: September;
    scroll-margin-left: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-left: November;
    -moz-scroll-margin-left: November;
    -ms-scroll-margin-left: November;
    scroll-margin-left: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-left: August;
    -moz-scroll-margin-left: August;
    -ms-scroll-margin-left: August;
    scroll-margin-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-margin-left: July;
    -moz-scroll-margin-left: July;
    -ms-scroll-margin-left: July;
    scroll-margin-left: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-left: August;
    -moz-scroll-margin-left: August;
    -ms-scroll-margin-left: August;
    scroll-margin-left: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-left: September;
    -moz-scroll-margin-left: September;
    -ms-scroll-margin-left: September;
    scroll-margin-left: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-left: November;
    -moz-scroll-margin-left: November;
    -ms-scroll-margin-left: November;
    scroll-margin-left: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-left: August;
    -moz-scroll-margin-left: August;
    -ms-scroll-margin-left: August;
    scroll-margin-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-left: January;
    -moz-scroll-margin-left: January;
    -ms-scroll-margin-left: January;
    scroll-margin-left: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-left: December;
    -moz-scroll-margin-left: December;
    -ms-scroll-margin-left: December;
    scroll-margin-left: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-left: April;
    -moz-scroll-margin-left: April;
    -ms-scroll-margin-left: April;
    scroll-margin-left: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-left: May;
    -moz-scroll-margin-left: May;
    -ms-scroll-margin-left: May;
    scroll-margin-left: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-left: June;
    -moz-scroll-margin-left: June;
    -ms-scroll-margin-left: June;
    scroll-margin-left: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-left: January;
    -moz-scroll-margin-left: January;
    -ms-scroll-margin-left: January;
    scroll-margin-left: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-left: December;
    -moz-scroll-margin-left: December;
    -ms-scroll-margin-left: December;
    scroll-margin-left: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-left: April;
    -moz-scroll-margin-left: April;
    -ms-scroll-margin-left: April;
    scroll-margin-left: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-left: May;
    -moz-scroll-margin-left: May;
    -ms-scroll-margin-left: May;
    scroll-margin-left: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-left: June;
    -moz-scroll-margin-left: June;
    -ms-scroll-margin-left: June;
    scroll-margin-left: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginLeft renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-left: 54881px;
  -moz-scroll-margin-left: 54881px;
  -ms-scroll-margin-left: 54881px;
  scroll-margin-left: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: 54881px;
  -moz-scroll-margin-left: 54881px;
  -ms-scroll-margin-left: 54881px;
  scroll-margin-left: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: 42365px;
  -moz-scroll-margin-left: 42365px;
  -ms-scroll-margin-left: 42365px;
  scroll-margin-left: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: 42365px;
  -moz-scroll-margin-left: 42365px;
  -ms-scroll-margin-left: 42365px;
  scroll-margin-left: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginLeft renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-left: July;
  -moz-scroll-margin-left: July;
  -ms-scroll-margin-left: July;
  scroll-margin-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: July;
  -moz-scroll-margin-left: July;
  -ms-scroll-margin-left: July;
  scroll-margin-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: June;
  -moz-scroll-margin-left: June;
  -ms-scroll-margin-left: June;
  scroll-margin-left: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: June;
  -moz-scroll-margin-left: June;
  -ms-scroll-margin-left: June;
  scroll-margin-left: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginLeft renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-left: DarkSlateBlue;
  -moz-scroll-margin-left: DarkSlateBlue;
  -ms-scroll-margin-left: DarkSlateBlue;
  scroll-margin-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: DarkSlateBlue;
  -moz-scroll-margin-left: DarkSlateBlue;
  -ms-scroll-margin-left: DarkSlateBlue;
  scroll-margin-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: DarkSlateBlue;
  -moz-scroll-margin-left: DarkSlateBlue;
  -ms-scroll-margin-left: DarkSlateBlue;
  scroll-margin-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-left: DarkSlateBlue;
  -moz-scroll-margin-left: DarkSlateBlue;
  -ms-scroll-margin-left: DarkSlateBlue;
  scroll-margin-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
